--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <quarkus.platform.version>3.26.3</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.3</surefire-plugin.version>
+        <sonar.organization>cassianojr</sonar.organization>
     </properties>
 
     <dependencyManagement>
