--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,50 +1,10 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow helps you trigger a SonarCloud analysis of your code and populates
-# GitHub Code Scanning alerts with the vulnerabilities found.
-# Free for open source project.
-
-# 1. Login to SonarCloud.io using your GitHub account
-
-# 2. Import your project on SonarCloud
-#     * Add your GitHub organization first, then add your repository as a new project.
-#     * Please note that many languages are eligible for automatic analysis,
-#       which means that the analysis will start automatically without the need to set up GitHub Actions.
-#     * This behavior can be changed in Administration > Analysis Method.
-#
-# 3. Follow the SonarCloud in-product tutorial
-#     * a. Copy/paste the Project Key and the Organization Key into the args parameter below
-#          (You'll find this information in SonarCloud. Click on "Information" at the bottom left)
-#
-#     * b. Generate a new token and add it to your GitHub repository's secrets using the name SONAR_TOKEN
-#          (On SonarCloud, click on your avatar on top-right > My account > Security
-#           or go directly to https://sonarcloud.io/account/security/)
-
-# Feel free to take a look at our documentation (https://docs.sonarcloud.io/getting-started/github/)
-# or reach out to our community forum if you need some help (https://community.sonarsource.com/c/help/sc/9)
-
-name: SonarCloud analysis
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions:
-  pull-requests: read # allows SonarCloud to decorate PRs with analysis results
-
 jobs:
   build-and-analyze:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Required by SonarQube for accurate analysis
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -53,20 +13,19 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build and run tests with JaCoCo
-        run: mvn -B clean package -Dquarkus.package.write-transformed-bytecode-to-build-output=true
+      - name: Build, run tests and generate JaCoCo report
+        run: mvn -B clean verify -Dquarkus.package.write-transformed-bytecode-to-build-output=true
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-github-action@master # Use sonarqube-scan-action for SonarQube Server
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: .
           args: >
             -Dsonar.projectKey=cassianojr_caixaverso
-            -Dsonar.organization=cassianojr # For SonarCloud
-            -Dsonar.host.url=https://sonarcloud.io # For SonarCloud
+            -Dsonar.organization=cassianojr
+            -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco.xml
-            -Dsonar.sources=src/main/java/
-            -Dsonar.language=java
-            -Dsonar.java.binaries=**/target/classes
+            -Dsonar.sources=src/main/java
+            -Dsonar.java.binaries=target/classes
