Adiciona cobertura de testes para ProdutoRepositoryImpl.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ quarkus.datasource.username=sa
 quarkus.datasource.password=${DB_PASSWORD}
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
+## Jacoco (extension quarkus-jacoco)
+quarkus.jacoco.report=true
+quarkus.jacoco.output-dir=${quarkus.package.output-directory:target}
+quarkus.jacoco.includes=br.gov.caixa.*
+quarkus.jacoco.excludes=
